--- a/components/checkbox/style/index.scss
+++ b/components/checkbox/style/index.scss
@@ -5,13 +5,13 @@
   @include m(disabled) {
     @include e(inner) {
       opacity: 1;
-      background-color: var(--checkbox-disabled-background);
+      background-color: var(--background-disabled);
     }
 
     @include m(checked) {
       @include e(inner) {
         border-color: var(--checkbox-border-color);
-        background-color: var(--checkbox-disabled-background);
+        background-color: var(--background-disabled);
 
         &:before {
           border-color: var(--checkbox-border-color);
