--- a/components/radio/style/component.scss
+++ b/components/radio/style/component.scss
@@ -1,252 +1,119 @@
-@import '../../button/style/mixins.scss';
+@import '../../style/core/index';
+@import 'node_modules/zarm/lib/radio/style/component.scss';
 
-/* 一般状态 */
 @include b(radio) {
-  display: inline-block;
-  position: relative;
-  padding-right: 4px;
-  font-size: var(--font-size-md);
-  line-height: 1;
-  vertical-align: middle;
-  white-space: nowrap;
-  outline: none;
-  cursor: pointer;
-  user-select: none;
-  background: #fff;
-  margin-right: 24px;
-
   @include e(inner) {
-    position: relative;
-    left: 0;
-    display: inline-block;
-    vertical-align: sub;
-    width: var(--radio-inner-width);
-    height: var(--radio-inner-width);
-    border: 1px solid var(--button-default-border);
-    border-radius: 14px;
-    background-color: var(--color-text-inverse);
-    transition: border-color .3s cubic-bezier(.78, .14, .15, .86), background-color .3s cubic-bezier(.78, .14, .15, .86);
-
-    & + * {
-      margin: 0 r(8);
-    }
-
-    &:after {
-      content: ' ';
-      position: absolute;
-      width: calc((var(--radio-inner-width) - 2px) / 2);
-      height: calc((var(--radio-inner-width) - 2px) / 2);
-      left: 50%;
-      top: 50%;
-      border-radius: 100%;
-      display: table;
-      border-top: 0;
-      border-left: 0;
+    &:before {
+      content: '';
+      width: calc(var(--radio-size) / 2.33);
+      height: calc(var(--radio-size) / 2.33);
+      border: none;
+      border-radius: var(--radius-circle);
       background-color: var(--theme-primary);
-      opacity: 0;
-      transform: translate(-50%, -50%) scale(0);
-      transition:
-        transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86),
-        opacity 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86),
-        background-color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+      margin: 0;
+      transform: scale(0);
+      transition: all .2s cubic-bezier(.71, -0.46, .88, .6);
     }
   }
 
-  &:hover {
-    @include b(radio) {
-      @include e(inner) {
-        border-color: var(--theme-primary);
-      }
-    }
-  }
-
-  @include e(input) {
-    position: absolute;
-    left: 0;
-    opacity: 0;
-  }
-
-  /* 选中状态 */
+  // 选中状态
   @include m(checked) {
     @include e(inner) {
-      border-color: var(--theme-primary);
+      background-color: var(--color-text-inverse);
 
-      &:after {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-        transition:
-          transform 0.3s cubic-bezier(0.12, 0.4, 0.29, 1.46),
-          opacity 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86),
-          background-color 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+      &:before {
+        transform: scale(1);
+        transition: all .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
       }
     }
   }
 
-  /* 禁用状态 */
   @include m(disabled) {
-    color: var(--radio-disabled-color);
-
     @include e(inner) {
-      border-color: var(--radio-disabled-border);
-      background-color: var(--radio-disabled-background);
-      cursor: not-allowed;
-
-      &:after {
-        background-color: #ccc;
-      }
+      opacity: 1;
+      background-color: var(--background-disabled);
     }
 
-    &:hover {
+    @include m(checked) {
       @include e(inner) {
-        border-color: #d9d9d9;
+        background-color: var(--background-disabled);
+
+        &:before {
+          background-color: var(--radio-border-color);
+        }
       }
     }
   }
-
-  // & + span {
-  //   margin-left: 5px;
-  // }
 }
 
-/* 组合状态 */
 @include b(radio-group) {
-  position: relative;
-  display: inline-block;
-  border-left: 0;
-  background: #fff;
-  padding: 0 15px;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  user-select: none;
-
-  /* 按钮类型 */
   @include m(button) {
     @include b(radio) {
-      margin: 0;
+      color: var(--radio-color);
 
-      &:first-child {
-        border-left: 1px solid var(--radio-default-border);
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-        box-shadow: none !important;
-      }
-
-      &:last-child {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-      }
-
-      @include e(inner) {
-        display: none;
-        opacity: 0;
-
-        & + span {
-          margin: 0;
-        }
-      }
-
-      @include button-base();
-      @include button-size(
-        var(--button-height-xs),
-        var(--button-padding-h-xs),
-        var(--button-font-size-xs),
-        var(--button-icon-size-xs),
-      );
-
-      @include button-theme(
-        var(--radio-default-background),
-        var(--radio-default-border),
-        var(--radio-button-color),
-        var(--radio-default-background),
-        var(--radio-default-border),
-        var(--radio-hover-color),
-        var(--radio-default-background),
-        var(--radio-default-border),
-        var(--radio-button-color),
-        var(--radio-disabled-background),
-        var(--radio-disabled-border),
-        var(--radio-disabled-color),
-        var(--button-disabled-opacity),
-      );
-
-      @include m(checked) {
-        color: var(--radio-checked-color);
-        border-color: var(--radio-checked-border);
-        box-shadow: -1px 0 0 0 var(--radio-checked-border);
-
-        &:first-child {
-          border-color: var(--radio-checked-border);
-        }
-
-        &:hover {
-          color: var(--radio-checked-color);
-        }
+      &:hover {
+        color: var(--theme-primary);
       }
 
       @include m(disabled) {
         opacity: 1;
-        color: var(--radio-disabled-color);
-        border-color: var(--radio-disabled-border);
-
-        @include m(checked) {
-          background-color: var(--radio-disabled-checked-background);
-        }
-
-        &:first-child {
-          border-color: var(--radio-disabled-border);
-        }
+        background-color: var(--background-disabled);
+        color: var(--color-text-disabled);
 
         &:hover {
-          color: var(--radio-disabled-color);
+          color: var(--color-text-disabled);
         }
       }
-
-      // 重写button的行高
-      line-height: calc(var(--button-height-xs) - 2px);
-      border: 1px solid var(--radio-default-border);
-      border-left: 0;
     }
-  }
 
-  @include m(rect) {
-    @include b(radio) {
-      @include button-shape(0);
-    }
-  }
-
-  @include m(round) {
-    @include b(radio) {
-      @include button-shape(var(--radius-md));
-
-      &:not(:first-child):not(:last-child) {
-        border-radius: 0;
+    @include m(ghost) {
+      @include b(radio) {
+        @include m(disabled) {
+          @include m(checked) {
+            &,
+            &:hover {
+              opacity: 1;
+              border-color: var(--button-default-border);
+              background-color: #f2f2f2;
+              color: var(--color-text-disabled);
+            }
+          }
+        }
       }
     }
-  }
 
-  @include m(lg) {
-    @include b(radio) {
-      @include button-size(
-        var(--button-height-xl),
-        var(--button-padding-h-lg),
-        var(--button-font-size-lg),
-        var(--button-font-size-lg)
-      );
-
-      line-height: calc(var(--button-height-lg) - 2px);
+    // sizes
+    @include m(lg) {
+      @include b(radio) {
+        @include button-size(
+          var(--button-height-lg),
+          var(--button-padding-h-lg),
+          var(--button-font-size-lg),
+          var(--button-icon-size-lg),
+        );
+      }
     }
-  }
 
-  @include m(md) {
-    @include b(radio) {
-      @include button-size(
-        var(--button-height-md),
-        var(--button-padding-h-md),
-        var(--button-font-size-md),
-        var(--button-font-size-md)
-      );
+    @include m(md) {
+      @include b(radio) {
+        @include button-size(
+          var(--button-height-md),
+          var(--button-padding-h-md),
+          var(--button-font-size-md),
+          var(--button-icon-size-md),
+        );
+      }
+    }
 
-      line-height: calc(var(--button-height-md) - 2px);
+    @include m(sm) {
+      @include b(radio) {
+        @include button-size(
+          var(--button-height-xs),
+          var(--button-padding-h-xs),
+          var(--button-font-size-xs),
+          var(--button-icon-size-xs),
+        );
+      }
     }
   }
 }
