docs: update input docs

--- a/components/input/style/index.scss
+++ b/components/input/style/index.scss
@@ -315,7 +315,7 @@
 
     textarea {
       max-width: 100%;
-      height: auto;
+      height: 100%;
       min-height: var(--input-height-md);
       line-height: 1.5;
       vertical-align: bottom;
