--- a/components/tabs/style/index.scss
+++ b/components/tabs/style/index.scss
@@ -1,3 +1,2 @@
-@import '../../style/core/mixins/index';
-@import '../../style/themes/default';
+@import '../../style/core/index';
 @import './component';
