--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -176,11 +176,12 @@
   --button-radio-btn-disabled-bg: rgba(250, 250, 250, 1);
 
   // Menu
-  --menu-color: #343434;
   --menu-default-bg-color: var(--color-text-inverse);
   --menu-dark-bg-color: #001529;
   --menu-collapsed-width: 56px;
+  --submenu-light-bg-color: #fff;
   --submenu-dark-bg-color: #000c17;
+  --submenu-min-width: 150px;
   --menuitem-dark-color: hsla(0, 0%, 100%, 0.65);
   --menuitem-dark-active-color: var(--color-text-inverse);
   --menuitem-default-color: #616161;
@@ -189,8 +190,14 @@
   --menuitem-disabled-color: rgba(0, 0, 0, 0.25);
   --menuitem-divider-bg-color: #e5e5e5;
   --menuitem-horizontal-padding: 20px;
-  --menuitem-horizontal-height: 44px;
+  --menuitem-height: 44px;
+  --menuitem-first-level-height: 52px;
   --menuitem-group-color: var(--color-text-caption);
+  --menuitem-group-title-height: 36px;
+  --menuitem-group-font-size: 13px;
+  --menuitem-icon-margin-right: 12px;
+  --menuitem-icon-min-width: 14px;
+  --menuitem-icon-font-size: 16px;
 
   // Tag
   --tag-height-lg: 32px;
