--- a/site/components/App/style.scss
+++ b/site/components/App/style.scss
@@ -15,11 +15,12 @@ body {
 }
 
 a {
-  color: #00bc70;
+  color: inherit;
   text-decoration: none;
 }
 
 a:focus {
+  color: #00bc70;
   outline: thin dotted;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
