--- a/site/styles/pages/dropdown.scss
+++ b/site/styles/pages/dropdown.scss
@@ -1,6 +1,18 @@
 .dropdown-trigger-box {
-  & > div {
+  &>div {
     margin-right: 20px;
     display: inline-block;
+  }
+}
+
+.dropdown-ul-list {
+  list-style-type: none;
+  padding: 0;
+  background-color: #fff;
+  margin: 0;
+
+  li {
+    padding: 10px;
+    min-width: 200px;
   }
 }
