chore: add input group for multiple input one line

--- a/components/input/style/index.scss
+++ b/components/input/style/index.scss
@@ -1,4 +1,5 @@
 @import '../../style/core/index';
+@import "./group";
 @import 'mixins';
 
 @include b(input) {
@@ -28,6 +29,7 @@
     &:hover {
       border-color: var(--theme-primary);
       outline: 0;
+      z-index: 1;
     }
 
     &:read-only {
@@ -155,6 +157,25 @@
       transform: translateY(0);
     }
 
+    @include e(prepend, append) {
+      background: none;
+      border-left: none;
+      border-right: none;
+      border-top: none;
+      border-color: var(--input-default-border-color);
+      border-radius: unset;
+
+      @include b(input) {
+        @include m(underline) {
+          margin-bottom: 0;
+        }
+      }
+
+      @include e(line) {
+        display: none;
+      }
+    }
+
     @include b(input) {
       &:not(:last-child) {
         padding-right: 12px;
@@ -182,6 +203,7 @@
       height: 1px;
       border: none;
       background-color: var(--input-default-border-color);
+      z-index: 2;
     }
 
     @include e(focus-line) {
@@ -195,6 +217,7 @@
       border: none;
       background-color: var(--theme-primary);
       transition: transform 0.25s;
+      z-index: 2;
     }
   }
 
